- Avoiding synchronized in BaseServer as it would pin the threads when using virtual threads (JGRP-2864) - Replaced 'synchronized' with locks where feasible