@@ -56,7 +56,7 @@ FLAGS="-server -Xmx1G -Xms500m -XX:+HeapDumpOnOutOfMemoryError -Djava.net.prefer
 # DUMP_VTHREADS=-Djdk.trackAllThreads=true
 
 # Dump when virtual threads are pinned on a carrier thread
-# FLAGS="$FLAGS Djdk.tracePinnedThreads=full"
+# FLAGS="$FLAGS -Djdk.tracePinnedThreads=full"
 
 java  $GC $DUMP_VTHREADS $Z1 -cp $CP $SSL_FLAGS $DEBUG $LOG $JG_FLAGS $FLAGS $JMX $JMC $*
 
